<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bencher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- 登录注册 -->
	<string name="login_title">＜登录</string>
	<string name="user_register">注册</string>
	<string name="user_login">登录</string>
	<string name="user_find_pwd">找回密码</string>
	<string name="register_title">＜注册</string>
	<string name="hint_input_phonenumber">请输入手机号码</string>
	<string name="hint_set_pwd">设置密码</string>
	<string name="hint_makesure_pwd">确认密码</string>
	<string name="hint_identify_code">"请输入验证码"</string>
	<string name="hint_get_code">获取验证码</string>
	<string name="hint_input_user_name">用户名</string>
	<string name="hint_user_pwd">密码</string>
	
	<!-- 错误提示 -->
	
	<string name="httpError">连接失败</string>
    <string name="httpisNull">没有网络</string>
    <string name="user_center_error">请先登录再进入用户中心</string>
    <string name="user_username">输入用户名</string>
    <string name="user_pwd">输入密码</string>
    <string name="user_login_error">用户名或者密码错误!</string>
    <string name="user_loginKey_error">错误密钥!</string>
    <string name="user_loginInfo_error">获取信息失败，\n请尝试重新登录。</string>
</resources>
